--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="it">   
+<html lang="it">
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "pedri", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Offro servizi sessuali, balli e massaggi erotici a domicilio. Vuoi vedere il mio catalogo?</div>
+Offro i miei servizi sessuali, ballo e massaggi erotici a domicilio, vuoi vedere il mio catalogo?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 No
@@ -35,17 +35,17 @@ Sì
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-NOTA: Sei d'accordo a rispettare le donne nude che vedi qui sotto? Se conosci qualcuno, per favore, non dirlo e non diffondere voci... </div>
+Congratulazioni! Sei stato ammesso, ora puoi parlare e scopare con qualsiasi ragazza, clicca su 'entra' qui sotto, compila il modulo, le ragazze aspettano un appuntamento per scopare e divertirsi. </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://aoarlv.swetllove.com/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2179274&s3=Pedri" class="step-btn submit-btn tr-submit-button showmail">ACCETTO</a>
+<a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Pedri}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ACCETTO</a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/290389/1723020901/images/video-1.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
